fix navbar issue where li and their icon weren't aligned

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&family=Comfortaa:wght@300&display=swap');
 :root{
 
 }
+
 
 *{
     margin:0;
@@ -17,8 +19,8 @@ body{
 
 .grid-container{
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-columns: 0.9fr 4fr 1fr;
+    grid-template-rows: 1fr 7fr;
     
    
 }
@@ -26,11 +28,12 @@ body{
 header{
     grid-column: 2 / span 2;
     grid-row: 1 / span 1;
-
+    background:rgba(240, 248, 255, 0.189);
     display: grid;
-    align-self: center;
     grid-template-columns: 1fr 3fr 1fr;
-    border-bottom: 1px solid white;
+    justify-items: center;
+    align-items: center;
+ 
 }
 header .profile-nav{
     background-color: rgba(86, 148, 203, 0.189);
@@ -41,39 +44,80 @@ header .profile-nav{
 
 /* Nav Stuff */
 nav{
+   padding: 1rem;
     grid-column: 1/ span 1;
     grid-row: 1 /span 2;
-    align-self: center;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
     border-right: 1px solid white;
 }
-nav .logo{
 
-  display: grid;
-  grid-template-columns: 1fr 4fr;
+nav > img{
+
+    width: 40px;
+    grid-column: 1 /span 1;
+    grid-row: 1 / span 1;
+    margin-bottom: 3rem;
+    justify-self: center;
+   
+    
+}
+nav h1 {
+    grid-column: 2 / span 1;
+    font-family: 'Baloo 2', cursive;
+    justify-self: start;
+    margin-left: 0.6rem;
+    font-size: 1.5rem;
 
 }
 nav ul{
-
     list-style: none;
-}
-/* main stuff */
+    grid-column: 1 / span 2;
+    grid-row: 2 / span 1;
 
+}
+
+nav li {
+    font-family: 'Comfortaa', cursive;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    margin-bottom: 2rem;
+    align-items: center;
+    justify-items: start;
+    font-size: 1.2rem;
+}
+
+nav>ul>li:nth-child(4){
+   margin-bottom: 4rem;
+}
+nav>ul>li:last-child{
+    margin-bottom: 0;
+ }
+
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+/* main stuff */
 main{
     grid-column: 2/ span 1;
     grid-row: 2 / span 1;
+    background-color: rgba(124, 128, 124, 0.223);
 }
 /* aside stuff */
 aside{
     grid-column: 3 /span 1;
     grid-row: 2 / span 1;
-    border-left: 1px solid white;
+
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 6fr;
 }
 
 aside .profile-content{
-    background-color: rgba(240, 248, 255, 0.189);
+  
 }
 
 
@@ -88,11 +132,10 @@ aside .profile-content{
 
 
 /*---------------*/
-.logo img{
-    width: 35px;
-}
+
 
 .icon{
-    width: 30px;
 
+    max-width: 30px;
+   
 }
